--- a/style.css
+++ b/style.css
@@ -19,15 +19,31 @@
 }
 
 .header{
-	width:960px;
+	
 	background:#04ff00;
 	color:#f00;
 	font-size:16px;
-	margin-top:10px;
-	margin-left:10px;
-	margin-bottom:10px;
-	padding-top:10px;
-	padding-left:10px;
-	padding-bottom:10px;
-	padding-right:10px;
+	margin: 0 auto;
+	text-align: center;
+	padding: 50px;
+}
+.feedback{
+	
+}
+
+.container{
+	width:960px;
+	border: 5px solid #ff0000; 
+	text-align: center;
+	margin: 100px auto;
+	border-radius: 20px;
+
+}
+.form__input{
+	width: 400px;
+	background: black;
+	color: white;
+	border:  1px solid;
+	font-size: 14px;
+	padding:10px 4px;
 }
