--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 	padding: 50px;
 }
 .feedback{
-	
+	padding-bottom:40px;
 }
 
 .container{
@@ -46,4 +46,12 @@
 	border:  1px solid;
 	font-size: 14px;
 	padding:10px 4px;
+	display : block;
+	margin: auto;
+}
+.form__button{
+		background: red;
+		padding: 10px;
+		color: black;
+		border-radius: 200px;
 }
