--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+body{
+	position: relative;
+	height:100vh;
+
+}
+
+body::after{
+	content:"";
+	position:absolute;
+	top:0;
+	width:100%;
+	height:100%;
+	background: url(windows-window.jpg);
+	background-size: cover;
+	background-repeat: none;
+}
+
 .h1{
 	color:#1628c9 ; 
 	font-size:48px ;
@@ -34,12 +51,14 @@
 }
 
 .container{
+	position: relative;
 	width:960px;
 	border: 5px solid #000; 
 	text-align: center;
 	margin: 100px auto;
 	border-radius: 20px;
-
+	z-index: 1;
+	
 }
 .form__input{
 	width: 400px;
